# spoon-core

./: .env.example  .gitignore  CLAUDE.md  How_to_build_an_agent.md  README.md  config.json  install-poetry.md  main.py  mcp_server.py  pyproject.toml  requirements.txt  requirements_backup.txt  run_updated_tests.py  test.py  test_2.py  tox.ini
.github/workflows/: ci.yml  release.yml  version-bump.yml
agents/: default.json  retrieval.json
api/: Dockerfile  Dockerfile.base  app.py
api/core/: config.py  database.py
api/routers/: chat.py  models.py  token.py  tools.py
cli/: commands.py
cookbook/: 0_how_to_build_a_chat_bot.ipynb  1_how_to_build_a_tool_call_agent.ipynb  2_how_to_execute_token_transfer_agent.ipynb  3_how_to_use_neofs_storage.ipynb
doc/: agent.md  cli.md  configuration.md  graph_agent.md  mcp_mode_usage.md  openrouter.md
doc/rag/: backends.md  examples.md  overview.md
examples/: README.md  add_message_with_image_agent.py  comprehensive_graph_demo.py  custom_agent_example.py  custom_tool_example.py  graph_crypto_analysis.py  intent_graph_demo.py  llm_integrated_graph_demo.py  mcp_react_example.py  mem0_agent.py  mem0_agent_demo.py  mem0_tool_agent.py  my_agent_demo.py  neo_toolkit_agent_demo.py  neofs-agent-demo.py  rag_graph_agent_demo.py  rag_react_agent_demo.py  short_term_memory_usage.py  skill_tests.py  solana_toolkit_demo.py  spoon_agent_conversation_demo.py  turnkey-agent-demo.py  web3_research_agent_demo.py  web3_research_skill_agent_demo.py  x402_agent_demo.py
examples/agent/: my_agent_demo.py
examples/btc_price_agent_example/: advanced_monitor.py  btc_price_monitor.py
examples/erc8004_did/: README.md  __init__.py  client_agent.py  run_demo.py  server_agent.py
examples/image_document_agent/: add_message_with_image_agent.py
examples/mcp/: SpoonThirdWebagent.py  deepwiki_demo.py  spoon_search_agent.py  tavily_search_agent.py
examples/smoke/: rag_chroma_smoke.py  rag_faiss_smoke.py  rag_github_loader_test.py  rag_pinecone_smoke.py  rag_qdrant_ollama_smoke.py  rag_qdrant_smoke.py  rag_react_offline_smoke.py  rag_tools_smoke.py
examples/turnkey/: build_unsigned_eip1559_tx.py  turnkey_trading_use_case.py
migrations/: env.py
migrations/versions/: 25ba6ed7e31a_add_address_relation.py  3b1bacede7e7_initial_migration.py  53ab6d3013fc_add_tools.py  84092133ffb7_init_db.py
models/base/: chat.py  model.py  token.py  tools.py
models/controller/: __init__.py  base.py  model.py
models/response/: response.py
models/workflow/: workflow.py
spoon_ai/: __init__.py  agent.py  callbacks.py  chat.py  graph.py  schema.py  security.py
spoon_ai/agents/: __init__.py  base.py  custom_agent.py  graph_agent.py  mcp_client_mixin.py  rag.py  react.py  skill_mixin.py  spoon.py  spoon_chat.py  spoon_react.py  (+3 more)
tests/: my_agent.py  noise.md  test_example_agents.py  test_example_tools.py  test_my_agent.py  test_neofs_client.py  test_neofs_utils.py  test_prompt_caching.py  test_security_env_scoping.py  test_skills.py  test_wallet_factory.py  test_x402_service.py
utils/: config_manager.py  utils.py
(+188 files in other folders)
