[tool.poetry]
name = "spoon-ai"
version = "0.1.0"
description = ""
authors = ["neo"]
readme = "install-poetry.md"

[tool.poetry.dependencies]
python = "^3.12"

aiohappyeyeballs = ">=2.4.4"
aiohttp = ">=3.10.11"
aiosignal = ">=1.3.2"
annotated-types = ">=0.7.0"
anyio = ">=4.8.0"
attrs = ">=25.1.0"
certifi = ">=2025.1.31"
charset-normalizer = ">=3.4.1"
distro = ">=1.9.0"
fastapi = ">=0.115.7"
frozenlist = ">=1.5.0"
greenlet = ">=3.1.1"
h11 = ">=0.14.0"
httpcore = ">=1.0.7"
httpx = ">=0.28.1"
idna = ">=3.10"
jiter = ">=0.5.0"
jsonpointer = ">=3.0.0"
multidict = ">=6.1.0"
openai = ">=1.70.0"
orjson = ">=3.10.15"
propcache = ">=0.2.1"
pydantic = ">=2.10.4"
pydantic-core = ">=2.27.2"
python-dotenv = ">=1.0.1"
regex = ">=2024.11.6"
requests = ">=2.32.3"
requests-toolbelt = ">=1.0.0"
sniffio = ">=1.3.1"
sqlalchemy = ">=2.0.38"
starlette = ">=0.45.3"
tenacity = ">=8.5.0"
tiktoken = ">=0.8.0"
tqdm = ">=4.67.1"
typing-extensions = ">=4.12.2"
urllib3 = ">=2.3.0"
yarl = ">=1.18.3"
prompt_toolkit = ">=3.0.51"
termcolor = ">=3.0.1"
pinecone = ">=6.0.2"
google = ">=3.0.0"
google-genai = ">=1.11.0"
protobuf = ">=3.19.5"
google-api-core = ">=2.24.2"
grpcio = ">=1.71.0"
web3 = "==6.20.0"
solana = ">=0.36.5"
nest_asyncio = ">=1.6.0"
python-telegram-bot = ">=22.0"
anthropic = ">=0.42.0"
boto3 = "==1.35.99"
botocore = "==1.35.99"
fastmcp = ">=2.2.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
